--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>« TD n°1 Programmation
+        <h1> TD n°1 Programmation
             web – Application météo</h1>
     </header>
 
